@@ -62,7 +62,6 @@ under the License.
   -->
 
   <properties>
-    <surefireMemory>-Xmx384m</surefireMemory>
     <!-- The original Maven distribution to test. -->
     <mavenHome>${maven.home}</mavenHome>
     <!-- The (possibly instrumented copy of the) Maven distribution we actually
@@ -515,7 +514,6 @@ under the License.
           <skip>true</skip>
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>${surefireMemory} -Dcom.sun.management.jmxremote=true</argLine>
           <!-- NOTE: Maven plugins have access to the system class path, keep it clean -->
           <useSystemClassLoader>false</useSystemClassLoader>
           <promoteUserPropertiesToSystemProperties>false</promoteUserPropertiesToSystemProperties>
@@ -640,15 +638,6 @@ under the License.
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>jdk-properties</id>
-      <activation>
-        <jdk>(,1.8)</jdk>
-      </activation>
-      <properties>
-        <surefireMemory>-Xmx384m -XX:MaxPermSize=192m</surefireMemory>
-      </properties>
     </profile>
     <profile>
       <id>forked</id>
